<resources>
    <string name="app_name">Popular Movies</string>
    <string name="network_error">
        We were not able o communicate with the servers. \nPlease, check your connection and swipe
        down to try again.
    </string>
    <string name="no_favorites">
        You don\'t have any favorites yet. \nYou can favorite movies by clicking in the heart icon.
    </string>
    <string name="menu_popular">Most Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_favorite">Favorites</string>
    <string name="favorite">Favorite this movie</string>
    <string name="share">Share this movie</string>
    <string name="overview">Overview</string>
    <string name="detail_error">Could not show details</string>
    <string name="poster_content_description">Movie poster</string>
    <string name="share_message">Here\'s a movie for you: %s%d</string>
    <string name="total_votes">%s votes</string>
    <string name="language">Language</string>
    <string name="date">Release Date</string>
    <string name="trailers">Trailers</string>
    <string name="no_trailers">No trailers available</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews available</string>
    <string name="intent_share">Share movie</string>
</resources>
